# qtywatcher

./: .gitignore  README.md  pyproject.toml
qtywatcher/: hooks.py  modules.txt  utility.py
qtywatcher/config/: desktop.py  docs.py
qtywatcher/fixtures/: client_script.json  custom_field.json
qtywatcher/overrides/: backup.py  pos_invoice.py  pos_invoice_merge_log.py  sales_invoice.py  stock_ledger_entry.py  test_custom_stock_ledger.py
qtywatcher/public/js/: Purchase_Invoice.js  Sales_Invoice.js  Stock_Entry.js  Stock_Reconciliation.js  common_invoices.js  custom_pos_item_details.js
qtywatcher/qtywatcher/custom/: pos_invoice_item.json
qtywatcher/qtywatcher/report/general_ledger_with_items/: general_ledger_with_items.js  general_ledger_with_items.py
qtywatcher/qtywatcher/report/stock_qty_balance/: stock_qty_balance.js  stock_qty_balance.json  stock_qty_balance.py
qtywatcher/qtywatcher/report/stock_qty_ledger/: stock_qty_ledger.js  stock_qty_ledger.json  stock_qty_ledger.py
qtywatcher/qtywatcher/report/test/: test.js  test.json  test.py
qtywatcher/qtywatcher/report/test1/: test1.json
