[project]
name = "qtywatcher"
authors = [
    { name = "mhmed rjb", email = "m222ragab@gmail.com"}
]
description = "in andusetry there is some items like(cheese) sell by Kg but this QTY is not fixed ,it is lose waight by dayes so we need another QTY to track stock "
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
